# quick-broadcastor

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  testMsg.json  vcpkg.json  策劃.md  進度.md
assets/icon/: QuickBroadcastor.xcf
src/: main.cxx  msg.cxx  msg.hxx  networkFunctionality.cxx  networkFunctionality.hxx  notifyWin.cxx  notifyWin.hxx  os_main.cxx  sendWin.cxx  sendWin.hxx  stdafx.h  trayFunctionality.cxx  trayFunctionality.hxx
